[package]
name = "sudoku-rust"
version = "1.0.0"
description = "A command-line sudoku player, generator and solver written in Rust."
authors = ["David Harkness <dharkness@gmail.com>"]
repository = "https://github.com/dharkness/sudoku-rust"
readme = "README.md"
keywords = ["sudoku", "game", "solver", "generator", "cli"]

edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ctrlc = "3.4.1"
itertools = "0.11.0"
rand = "0.8.5"
